--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@ email: zhanghanwen028@qzddj.vip
 description: > # this means to ignore newlines until "baseurl:"
   The new year has begun, bless yourself, enjoy a whole year of happy time, think hard, and quietly do what you love. Be a kind person and record your feelings with a pen.
 permalink: ':title/'
-baseurl: "/hanwen028.github.io" # the subpath of your site, e.g. /blog
-url: "hanwen028.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://hanwen028.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author settings
 author: hanwen # add your name
-author-pic: assets/img/hwb.jpeg
-about-author: My name is hanwen. I am a lazy person. Since I was young, the teacher said that I am lazy. I don't like to write with a pen. I like to talk. I like to live in my own way. I can't accept a fixed and unified lifestyle. I am not good at sports and I am afraid in my heart, and I have not overcome the obstacles until now.
+author-pic: hwb.jpeg
+about-author: My name is hanwen.I like to talk. I like to live in my own way.
 
 # Contact links
 email: zhanghanwen028@qzddj.vip # Add your Email address
