--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: My personal blog - hanwen028
+title: Hanwen personal blog 
 email: zhanghanwen028@qzddj.vip
 description: > # this means to ignore newlines until "baseurl:"
   The new year has begun, bless yourself, enjoy a whole year of happy time, think hard, and quietly do what you love. Be a kind person and record your feelings with a pen.
