--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,13 @@ instagram: # Add your Instagram handle
 pinterest: # Add your Pinterest handle
 
 # Newsletter
-#mailchimp: # Add your MailChimp form identifier.
+mailchimp: # Add your MailChimp form identifier.
 
 # Disqus
 discus_identifier: mr-brown # Add your discus identifier
 
 # Tracker
-#analytics: # Google Analytics
+analytics: # Google Analytics
 
 # Paginate
 paginate: 6
