--- a/_config.yml
+++ b/_config.yml
@@ -22,21 +22,15 @@ facebook: # Add your Facebook handle
 instagram: # Add your Instagram handle
 pinterest: # Add your Pinterest handle
 
-# Newsletter
-mailchimp: # Add your MailChimp form identifier.
-
-# Disqus
-discus_identifier: mr-brown # Add your discus identifier
-
-# Tracker
-analytics: # Google Analytics
-
 # Paginate
 paginate: 6
 paginate_path: /page:num/
 
 # Build settings
 markdown: kramdown
+permalink: pretty
+plugins:
+  - jekyll-sitemap
 
 plugins:
   - jekyll-paginate
